[gd_scene load_steps=10 format=2]

[ext_resource path="res://screens/Main.gd" type="Script" id=1]
[ext_resource path="res://characters/bad/BadDuck.tscn" type="PackedScene" id=2]
[ext_resource path="res://characters/good/GoodDuck.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/background.jpg" type="Texture" id=4]
[ext_resource path="res://screens/GUI.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/sprites/conveir.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/the_box.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/instructions.png" type="Texture" id=8]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 231.633 )

[node name="Main" type="Node"]

script = ExtResource( 1 )
bad_duck = ExtResource( 2 )
good_duck = ExtResource( 3 )

[node name="background" type="Sprite" parent="." index="0"]

modulate = Color( 1, 1, 1, 0.397804 )
texture = ExtResource( 4 )
offset = Vector2( 448.479, 299.857 )
_sections_unfolded = [ "Material", "Transform", "Visibility" ]

[node name="Spawn" type="Position2D" parent="." index="1"]

position = Vector2( 0, 300 )
_sections_unfolded = [ "Transform" ]

[node name="Area2D" type="Area2D" parent="." index="2" groups=[
"destroy",
]]

editor/display_folded = true
position = Vector2( 750, 300 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Transform" ]

[node name="Destroy" type="CollisionShape2D" parent="Area2D" index="0"]

shape = SubResource( 1 )

[node name="GUI" parent="." index="3" instance=ExtResource( 5 )]

[node name="SpawnTimer" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="LevelTimer" type="Timer" parent="." index="5"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="conveir" type="Sprite" parent="." index="6"]

position = Vector2( 363.381, 352.359 )
scale = Vector2( 2.98402, 1.84716 )
texture = ExtResource( 6 )

[node name="the_box" type="Sprite" parent="." index="7"]

position = Vector2( 726.046, 412.641 )
texture = ExtResource( 7 )

[node name="instructions" type="Sprite" parent="." index="8"]

position = Vector2( 402.925, 64.1756 )
texture = ExtResource( 8 )

[connection signal="timeout" from="SpawnTimer" to="." method="_on_Timer_timeout"]

[connection signal="timeout" from="LevelTimer" to="." method="_increase_level"]


